[project]
name = "chatbot-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.14.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
